@@ -10221,174 +10221,6 @@ static PyObject *_wrap_KrylovSolver_setPreconditioner(PyObject *self, PyObject *
 }
 
 
-static PyObject *_wrap_KrylovSolver_setReport(PyObject *, PyObject *args) {
-    PyObject *resultobj = NULL;
-    dolfin::KrylovSolver *arg1 = (dolfin::KrylovSolver *) 0 ;
-    bool arg2 ;
-    PyObject * obj0 = 0 ;
-    PyObject * obj1 = 0 ;
-    
-    if(!PyArg_ParseTuple(args,(char *)"OO:KrylovSolver_setReport",&obj0,&obj1)) goto fail;
-    SWIG_Python_ConvertPtr(obj0, (void **)&arg1, SWIGTYPE_p_dolfin__KrylovSolver, SWIG_POINTER_EXCEPTION | 0);
-    if (SWIG_arg_fail(1)) SWIG_fail;
-    {
-        arg2 = static_cast<bool >(SWIG_As_bool(obj1)); 
-        if (SWIG_arg_fail(2)) SWIG_fail;
-    }
-    try {
-        Swig::UnknownExceptionHandler dh;
-        (arg1)->setReport(arg2);
-        
-    } catch (Swig::DirectorException&) {
-        SWIG_fail;
-    }
-    Py_INCREF(Py_None); resultobj = Py_None;
-    return resultobj;
-    fail:
-    return NULL;
-}
-
-
-static PyObject *_wrap_KrylovSolver_setRtol(PyObject *, PyObject *args) {
-    PyObject *resultobj = NULL;
-    dolfin::KrylovSolver *arg1 = (dolfin::KrylovSolver *) 0 ;
-    dolfin::real arg2 ;
-    PyObject * obj0 = 0 ;
-    PyObject * obj1 = 0 ;
-    
-    if(!PyArg_ParseTuple(args,(char *)"OO:KrylovSolver_setRtol",&obj0,&obj1)) goto fail;
-    SWIG_Python_ConvertPtr(obj0, (void **)&arg1, SWIGTYPE_p_dolfin__KrylovSolver, SWIG_POINTER_EXCEPTION | 0);
-    if (SWIG_arg_fail(1)) SWIG_fail;
-    {
-        arg2 = static_cast<dolfin::real >(SWIG_As_double(obj1)); 
-        if (SWIG_arg_fail(2)) SWIG_fail;
-    }
-    try {
-        Swig::UnknownExceptionHandler dh;
-        (arg1)->setRtol(arg2);
-        
-    } catch (Swig::DirectorException&) {
-        SWIG_fail;
-    }
-    Py_INCREF(Py_None); resultobj = Py_None;
-    return resultobj;
-    fail:
-    return NULL;
-}
-
-
-static PyObject *_wrap_KrylovSolver_setAtol(PyObject *, PyObject *args) {
-    PyObject *resultobj = NULL;
-    dolfin::KrylovSolver *arg1 = (dolfin::KrylovSolver *) 0 ;
-    dolfin::real arg2 ;
-    PyObject * obj0 = 0 ;
-    PyObject * obj1 = 0 ;
-    
-    if(!PyArg_ParseTuple(args,(char *)"OO:KrylovSolver_setAtol",&obj0,&obj1)) goto fail;
-    SWIG_Python_ConvertPtr(obj0, (void **)&arg1, SWIGTYPE_p_dolfin__KrylovSolver, SWIG_POINTER_EXCEPTION | 0);
-    if (SWIG_arg_fail(1)) SWIG_fail;
-    {
-        arg2 = static_cast<dolfin::real >(SWIG_As_double(obj1)); 
-        if (SWIG_arg_fail(2)) SWIG_fail;
-    }
-    try {
-        Swig::UnknownExceptionHandler dh;
-        (arg1)->setAtol(arg2);
-        
-    } catch (Swig::DirectorException&) {
-        SWIG_fail;
-    }
-    Py_INCREF(Py_None); resultobj = Py_None;
-    return resultobj;
-    fail:
-    return NULL;
-}
-
-
-static PyObject *_wrap_KrylovSolver_setDtol(PyObject *, PyObject *args) {
-    PyObject *resultobj = NULL;
-    dolfin::KrylovSolver *arg1 = (dolfin::KrylovSolver *) 0 ;
-    dolfin::real arg2 ;
-    PyObject * obj0 = 0 ;
-    PyObject * obj1 = 0 ;
-    
-    if(!PyArg_ParseTuple(args,(char *)"OO:KrylovSolver_setDtol",&obj0,&obj1)) goto fail;
-    SWIG_Python_ConvertPtr(obj0, (void **)&arg1, SWIGTYPE_p_dolfin__KrylovSolver, SWIG_POINTER_EXCEPTION | 0);
-    if (SWIG_arg_fail(1)) SWIG_fail;
-    {
-        arg2 = static_cast<dolfin::real >(SWIG_As_double(obj1)); 
-        if (SWIG_arg_fail(2)) SWIG_fail;
-    }
-    try {
-        Swig::UnknownExceptionHandler dh;
-        (arg1)->setDtol(arg2);
-        
-    } catch (Swig::DirectorException&) {
-        SWIG_fail;
-    }
-    Py_INCREF(Py_None); resultobj = Py_None;
-    return resultobj;
-    fail:
-    return NULL;
-}
-
-
-static PyObject *_wrap_KrylovSolver_setMaxiter(PyObject *, PyObject *args) {
-    PyObject *resultobj = NULL;
-    dolfin::KrylovSolver *arg1 = (dolfin::KrylovSolver *) 0 ;
-    int arg2 ;
-    PyObject * obj0 = 0 ;
-    PyObject * obj1 = 0 ;
-    
-    if(!PyArg_ParseTuple(args,(char *)"OO:KrylovSolver_setMaxiter",&obj0,&obj1)) goto fail;
-    SWIG_Python_ConvertPtr(obj0, (void **)&arg1, SWIGTYPE_p_dolfin__KrylovSolver, SWIG_POINTER_EXCEPTION | 0);
-    if (SWIG_arg_fail(1)) SWIG_fail;
-    {
-        arg2 = static_cast<int >(SWIG_As_int(obj1)); 
-        if (SWIG_arg_fail(2)) SWIG_fail;
-    }
-    try {
-        Swig::UnknownExceptionHandler dh;
-        (arg1)->setMaxiter(arg2);
-        
-    } catch (Swig::DirectorException&) {
-        SWIG_fail;
-    }
-    Py_INCREF(Py_None); resultobj = Py_None;
-    return resultobj;
-    fail:
-    return NULL;
-}
-
-
-static PyObject *_wrap_KrylovSolver_setZeroPivot(PyObject *, PyObject *args) {
-    PyObject *resultobj = NULL;
-    dolfin::KrylovSolver *arg1 = (dolfin::KrylovSolver *) 0 ;
-    dolfin::real arg2 ;
-    PyObject * obj0 = 0 ;
-    PyObject * obj1 = 0 ;
-    
-    if(!PyArg_ParseTuple(args,(char *)"OO:KrylovSolver_setZeroPivot",&obj0,&obj1)) goto fail;
-    SWIG_Python_ConvertPtr(obj0, (void **)&arg1, SWIGTYPE_p_dolfin__KrylovSolver, SWIG_POINTER_EXCEPTION | 0);
-    if (SWIG_arg_fail(1)) SWIG_fail;
-    {
-        arg2 = static_cast<dolfin::real >(SWIG_As_double(obj1)); 
-        if (SWIG_arg_fail(2)) SWIG_fail;
-    }
-    try {
-        Swig::UnknownExceptionHandler dh;
-        (arg1)->setZeroPivot(arg2);
-        
-    } catch (Swig::DirectorException&) {
-        SWIG_fail;
-    }
-    Py_INCREF(Py_None); resultobj = Py_None;
-    return resultobj;
-    fail:
-    return NULL;
-}
-
-
 static PyObject *_wrap_KrylovSolver_solver(PyObject *, PyObject *args) {
     PyObject *resultobj = NULL;
     dolfin::KrylovSolver *arg1 = (dolfin::KrylovSolver *) 0 ;
@@ -39711,12 +39543,6 @@ static PyMethodDef SwigMethods[] = {
 	 { (char *)"KrylovSolver_solve", _wrap_KrylovSolver_solve, METH_VARARGS, NULL},
 	 { (char *)"KrylovSolver_setType", _wrap_KrylovSolver_setType, METH_VARARGS, NULL},
 	 { (char *)"KrylovSolver_setPreconditioner", _wrap_KrylovSolver_setPreconditioner, METH_VARARGS, NULL},
-	 { (char *)"KrylovSolver_setReport", _wrap_KrylovSolver_setReport, METH_VARARGS, NULL},
-	 { (char *)"KrylovSolver_setRtol", _wrap_KrylovSolver_setRtol, METH_VARARGS, NULL},
-	 { (char *)"KrylovSolver_setAtol", _wrap_KrylovSolver_setAtol, METH_VARARGS, NULL},
-	 { (char *)"KrylovSolver_setDtol", _wrap_KrylovSolver_setDtol, METH_VARARGS, NULL},
-	 { (char *)"KrylovSolver_setMaxiter", _wrap_KrylovSolver_setMaxiter, METH_VARARGS, NULL},
-	 { (char *)"KrylovSolver_setZeroPivot", _wrap_KrylovSolver_setZeroPivot, METH_VARARGS, NULL},
 	 { (char *)"KrylovSolver_solver", _wrap_KrylovSolver_solver, METH_VARARGS, NULL},
 	 { (char *)"KrylovSolver_disp", _wrap_KrylovSolver_disp, METH_VARARGS, NULL},
 	 { (char *)"KrylovSolver_swigregister", KrylovSolver_swigregister, METH_VARARGS, NULL},
